Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1972

TSNetAcceptNamedProtocol does not receive connections

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.5
    • Plugins, SSL, TS API
    • None

    Description

      As reported on the list, TSNetAcceptNamedProtocol() is not longer receiving connection events.

      http://mail-archives.apache.org/mod_mbox/trafficserver-users/201306.mbox/%3cCAOZ5U7bq5kbKnZy9Qw6raXJXCoMC_N-gSHMVumiqygyXAsdtMA@mail.gmail.com%3e

      Attachments

        Issue Links

          Activity

            People

              jamespeach James Peach
              jamespeach James Peach
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: