TS-1972: TSNetAcceptNamedProtocol does not receive connections

In TS-1670, a refactoring lost the code that sets the Next Protocol
Negotiation callbacks on the SSL context. This change restores NPN,
which fixes TSNetAcceptNamedProtocol.